fix: letter-spacing

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -37,4 +37,5 @@ p,
 li {
   color: $black;
   font-family: 'Rubik', sans-serif;
+  letter-spacing: 0;
 }
